redis+celery 복구 로직 추가